--- a/dutiya/1.na_nu_nanu_vakya.md
+++ b/dutiya/1.na_nu_nanu_vakya.md
@@ -70,7 +70,7 @@
 |**(ဃ)** မှန်ပါ . . . ကိုရင်များ ထမင်း မချက်ကြပါ။对 沙弥不做饭|
 
 **<center>ကြည်ရှုရန်</center>**
->န = ma+gaccha-သွား+နု-လော(လား) [န ဂစ္ဆတိ နု-မသွားဘူးလော, မသွားဘူးလား။] ဤသို့ ပုဒ်နေ အစဉ်ကြည့်၍ အနက်အစဉ်အတိုင်း ပေးရ, မြန်မာပြန်ရသည်။<br>“န+ဂစ္ဆတိ+နနု=မသွားသည် မဟုတ်လော၊ န အတ္ထိ နနု-မရှိသည်မဟုတ်လော၊ န ဟောတိ နနု-မဖြစ်သည် မဟုတ်လော” ဤသို့ ပုဒ်စဉ်အတိုင်း  အနက်ပေးရ, မြန်မာပြန်ရသည်၊ သာ၍နားလည်အောင် တစ်ခန်းပြပါဦးမည်။
+>န = ma+gaccha-သွား走+နု-လော(လား)吗 [na gacchati nu-မသွားဘူးလော, မသွားဘူးလား不走吗။] ဤသို့ ပုဒ်နေ အစဉ်ကြည့်၍ အနက်အစဉ်အတိုင်း ပေးရ, မြန်မာပြန်ရသည်可以缅文解释顺序的意思။<br>“na+gacchati+nanu=မသွားသည် မဟုတ်လော不是不走吗၊ na atthi nanu-မရှိသည်မဟုတ်လော不是没有吗၊ na hoti nanu-မဖြစ်သည် မဟုတ်လော不是不成为吗” ဤသို့ ပုဒ်စဉ်အတိုင်း以组词组的方式  အနက်ပေးရ, မြန်မာပြန်ရသည်可以缅文解释意思၊ သာ၍နားလည်အောင် တစ်ခန်းပြပါဦးမည်။
 
 
 |  |  |
@@ -82,4 +82,4 @@
 >**[‌ဆောင်]** န-ချည်း သက်သက်၊ နု- သက်သက်တည်း၊ တွဲလျက် နနု၊ ခွဲ န + နုနှင့်၊ နနု နောက်တွဲ, ရှေ့ (န)ဆွဲ၊ ရှိမြဲ ကြိယာ ငါးမျိုးတည်း။
 
 **<center>ကြည်ရှုရန်</center>**
->**န-ချည်း သက်သက်။** ။နု-မပါဘဲ န-သက်သက်ကို ကြိယာနှင့် တွဲ၍ “န ဟောတိ-မဖြစ်” ဟု လည်းကောင်း<br>**နု-သက်သက်။** ။န-မပါဘဲ ”ဟောတိ နု=ဖြစ်သလော” ဟု လည်းကောင်း။<br>**နနု-တွဲ၍။** ။”ဟောတိ နနု=ဖြစ်သည် မဟုတ်လော” ဟု လည်းကောင်း။<br>**န-နှင့် နုကိုခွဲ၍။** ။”န ဟောတိ နု=မဖြစ်သလော=မဖြစ်ဘူးလော” ဟုလည်းကောင်း။<br>**နနု**-ကို ကြိယာနောက်က တွဲ၍, **န**-ကို ကြိယာရှေ့က တွဲထားလျက်”န ဟောတိ နနု-မဖြစ်သည် မဟုတ်လော” ဟုလည်းကောင်း, ဝါကျ **၅** မျိုး ရှိရိုး ဖြစ်သည်။<br>**ရှေ့ ၌** ပြအပ်းသော ဝါကျများကို စာသင်သား၏ ဉာဏ်ကို လိုက်၍ အမျိုးမျိုး တွဲခိုင်းပါ၊ ဉာဏ်သဘော ဝေးသေးပုံရလျှင်လည်း ပြန်၍မခိုင်းပါနှင့်၊ အခြေရသောအခါ အလိုလို သဘောပေါက်လာပါလိမ့်မည်။
+>**န-ချည်း သက်သက်။** ။nu-မပါဘဲ na-သက်သက်ကို ကြိယာနှင့် တွဲ၍连接动词 “na hoti-မဖြစ်不成为” ဟု လည်းကောင်း<br>**nu-သက်သက်။** ။na-မပါဘဲ不加 ”hoti nu=ဖြစ်သလော成为吗” ဟု လည်းကောင်း။<br>**nanu-တွဲ၍။** ။”hoti nanu=ဖြစ်သည် မဟုတ်လော不是成为吗” ဟု လည်းကောင်း။<br>**na-နှင့် နုကိုခွဲ၍။** ။” na hoti nu=မဖြစ်သလော不成为吗=မဖြစ်ဘူးလော不成为吗” ဟုလည်းကောင်း။<br>**nanu**-ကို ကြိယာနောက်က တွဲ၍, **na**-ကို ကြိယာရှေ့က တွဲထားလျက်连接前面动词”na hoti nanu-မဖြစ်သည် မဟုတ်လော不是不成为吗” ဟုလည်းကောင်း, ဝါကျ **၅** မျိုး5种 ရှိရိုး ဖြစ်သည်။<br>**ရှေ့ ၌前面** ပြအပ်းသော ဝါကျများကို စာသင်သား၏ ဉာဏ်ကို လိုက်၍ အမျိုးမျိုး种种 တွဲခိုင်းပါ၊ ဉာဏ်သဘော ဝေးသေးပုံရလျှင်လည်း ပြန်၍မခိုင်းပါနှင့်၊ အခြေရသောအခါ အလိုလို သဘောပေါက်လာပါလိမ့်မည်။
