--- a/dutiya/2.aratu_visesana.md
+++ b/dutiya/2.aratu_visesana.md
@@ -1,46 +1,47 @@
 ## <center>အရတူ ဝိသေသန</center>
 
-- **၁။** ဧကော ပုရိသော ဝိဟာရံ အာဂစ္ဆတိ။
-- **၂။** တွံ မဟန္တော ပဏ္ဍိတော အသိ။ 
-- **၃။** တုမှေ မဟန္တာ ပဏ္ဍိတာ အတ္ထ။
-- **၄။** အဟံ မဟန္တော ပဏ္ဍိတော အမှိ။
-- **၅။** မဟံ မဟန္တာ ပဏ္ဍိတာ အမှ။
-- **၆။**  အသိ နု တွံ ဗာလော မနုဿော။
-- **၇။** နာ.ဟံ အမှိ ဗာလော မနုဿော၊ ပဏ္ဍိတာ.မှိ။
+- **၁။** eko puriso vihāraṃ āgacchati။
+- **၂။** thaṃ mahanto paṇḍito asi။ 
+- **၃။** tumhe mahantā paṇḍitā attha။
+- **၄။** ahaṃ mahanto paṇḍito amhi။
+- **၅။** mahaṃ mahantā paṇḍitā amha။
+- **၆။**  asi nu thaṃ bālo manusso။
+- **၇။** nā.haṃ amhi bālo manusso， paṇḍitā.mhi။
 ---
-- **(က)** တစ်ယောက်သော လူသည် ရွာသို့ သွား၏။ 
-- **(ခ)** မြတ်ကုန်သော လူလိမ္မာတို့သည် ဘုရားကို ဆည်ကပ်ကြကုန်၏။ 
-- **(ဂ)** ငါတို့သည် မိုက်ကုန်သော လူများ မဟုတ်ကြပါ။
-- **(ဃ)** မြတ်သော ယောကျ်ား။ 
-- **(င)** မြတ်သော ယောကျ်ား တစ်ယောက်။
-- **(စ)** မြတ်သော သတို့သမီး။
-- **(ဆ)** မြတ်သော သတို့သမီး တစ်ယောက်။
-- **(ဇ)** မိုက်သော ကလေး တစ်ယောက်။
-- **(ဈ)** လိမ္မာသော သူငယ်မ တစ်ယောက်။
+- **(က)** တစ်ယောက်သော လူသည် ရွာသို့ သွား၏။ 一个人去村里。
+- **(ခ)** မြတ်ကုန်သော လူလိမ္မာတို့သည် ဘုရားကို ဆည်ကပ်ကြကုန်၏။ 高贵的人们皈依佛陀。
+- **(ဂ)** ငါတို့သည် မိုက်ကုန်သော လူများ မဟုတ်ကြပါ။我们不是高贵的人。
+- **(ဃ)** မြတ်သော ယောကျ်ား။ 高贵的男人。
+- **(င)** မြတ်သော ယောကျ်ား တစ်ယောက်။一位高贵的男人。
+- **(စ)** မြတ်သော သတို့သမီး။高贵的女人。
+- **(ဆ)** မြတ်သော သတို့သမီး တစ်ယောက်။一位高贵的女人。
+- **(ဇ)** မိုက်သော ကလေး တစ်ယောက်။一位坏孩子。
+- **(ဈ)** လိမ္မာသော သူငယ်မ တစ်ယောက်။一位听话的女孩。
 
 **<center>ကြည့်ရှုရန်</center>**
->ဧက-တစ်၊ မဟန္တ-မြတ်သော, ကြီးသော။  [ဣတ္ထိလိင်၌ “မဟန္တီ” နပုလ္လိင်၌ “မဟန္တံ” ဟုဖြစ်၏။]
+>eka-တစ်一၊ mahanta-မြတ်သော高贵的, ကြီးသော大的။  [ဣတ္ထိလိင်၌阴性 “mahantī” နပုလ္လိင်၌中性 “mahantaṃ” ဟုဖြစ်၏။]
 
 ## <center>ဒုတိယာ ဝိဘတ်နက်</center>
 **<center>အရတူ ဝိသေသန</center>**
 
-- **၁။** အဟံ ဧကံ ဒါရိကံ ပဿာမိ။ 
-- **၂။** ကညာ အဘိရူပံ ဒါရကံ ဩလောကေတိ။ 
-- **၃။** ဣစ္ဆသိ နု တွံ ဗာလံ သိဿံ။ 
-- **၄။** န ဣစ္ဆာမိ အဟံ ဗာလံ သိဿံ၊ ဣစ္ဆာမိ အဟံ ပဏ္ဍိတံ သိဿံ။
-- **၅။** သမဏာ ဇေတဝနံ နာမ အာရာမံ အာဂစ္ဆန္တိ။
+- **၁။** ahaṃ ekaṃ dārikaṃ passāmi။ 
+- **၂။** kaññā abhirūpaṃ dārakaṃ oloketi။ 
+- **၃။** icchasi nu thaṃ bālaṃ sissaṃ။ 
+- **၄။** na icchāmi ahaṃ bālaṃ sissaṃ， icchāmi ahaṃ paṇḍitaṃ sissaṃ။
+- **၅။** samaṇā jetavanaṃ nāma ārāmaṃ āgacchanti။
 
 ---
 
-- **(က)** ငါသည် မိုက်သော ယောကျ်ားကို အလိုမရှိ။
-- **(ခ)** လူတို့သည် လိမ္မာသော ကလေးမကို ကြည့်ကြကုန်၏။
-- **(ဂ)** ကလေးသည် ဂန္ဓာရုံသော ကျောင်းတိုက်သို့ လာ၏။
-- **(ဃ)** ရဟန်းတို့သည် အရသာကောင်းသော ဆွမ်းကို မရကြ။
-- **(င)** အလွန်လှသော သတို့သားသည် အလွန်လှသော သတို့သမီးကိုမရ။ 
-- **(စ)** ကြီးစွာသော ယောကျ်ားကို။
-- **(ဆ)** မြတ်သော ယောကျ်ား တစ်ယောက်ကို။
-- **(ဇ)** လိမ္မာသော သတို့သမီး တစ်ယောက်ကို။
+- **(က)** ငါသည် မိုက်သော ယောကျ်ားကို အလိုမရှိ။我不需要坏的男人。
+- **(ခ)** လူတို့သည် လိမ္မာသော ကလေးမကို ကြည့်ကြကုန်၏။人们看听话的小女孩。
+- **(ဂ)** ကလေးသည် ဂန္ဓာရုံသော ကျောင်းတိုက်သို့ လာ၏။ 小孩从？？寺院来。
+- **(ဃ)** ရဟန်းတို့သည် အရသာကောင်းသော ဆွမ်းကို မရကြ။比库们没得到美味的饭。
+- **(င)** အလွန်လှသော သတို့သားသည် အလွန်လှသော သတို့သမီးကိုမရ။ 非常漂亮的男孩得不到非常漂亮的女孩。
+- **(စ)** ကြီးစွာသော ယောကျ်ားကို။年长的男孩。
+- **(ဆ)** မြတ်သော ယောကျ်ား တစ်ယောက်ကို။一位高贵的男人。
+- **(ဇ)** လိမ္မာသော သတို့သမီး တစ်ယောက်ကို။一位听话的女人
 
 **<center>ကြည့်ရှုရန်</center>**
 
->ပဿ-မြင်(ကြည့်)။ ။ဩဘောကေ-ကြည့်။ ။ဣစ္ဆ-လိုလား, လိုချင်, အလိုရှိ။ ။အဘိရူပံ-လွန်ကဲသော အဆင်းရှိသော(အလွန်လှသော)။ ။ဇေတဝနံနာမ-ဇေတဝန်မည်သော။ ။ဂန္ဓာရာမော-ဂန္ဓာရုံ။  ။အာရာမော-အာရာမ်, ခြံ, ကျောင်းတိုက်။
+>passa-မြင်(ကြည့်)看။ ။obhoke-ကြည့်看။ ။iccha-လိုလား, လိုချင်, အလိုရှိ需要။ ။abhirūpaṃ-လွန်ကဲသော အဆင်းရှိသော
+(အလွန်လှသော非常漂亮)။ ။jetavanaṃnāma-ဇေတဝန်မည်သော叫做祇陀林။ ။gandhārāmo-ဂန္ဓာရုံ။  ။ārāmo-အာရာမ်, ခြံ, ကျောင်းတိုက်寺院။
