--- a/dutiya/3.tutiya_visesana.md
+++ b/dutiya/3.tutiya_visesana.md
@@ -1,38 +1,38 @@
 ## <center>(က) ဒုတိယာ ကြိယာဝိသေသန</center>
 |  |  |
 | - | - |
-|**၁။** ဒါရကော သုခံ သယတိ။|**၂။** အဟံ ဒုက္ခံ နသယာမိ။|
-|**၃။** ဒါရိကာ ဩဒနံ မုဒုံ ပစတိ။|**၄။** ဩဒနော မုဒုံ န ပစ္စတိ။|
-|**၅။** ပုရိသော ဧကမန္တံ နိသီဒတိ။|**၆။** တွံ ဧကမန္တံ န နိသီဒသိ။|
+|**၁။** dārako sukhaṃ sayati။|**၂။** ahaṃ dukkhaṃ nasayāmi။|
+|**၃။** dārikā odanaṃ muduṃ pacati။|**၄။**odano muduṃ na paccati။|
+|**၅။** puriso ekamantaṃ nisīdati။|**၆။** thaṃ ekamantaṃ na nisīdasi။|
 ---
-- **(က)** သင်သည် ချမ်းသာစွာ အိမ်ရ၏လော။
-- **(ခ)** ကျွန်ုပ်သည် ချမ်းသာစွာ နေရပါ၏၊ ဆင်းဆင်းရဲရဲ မနေရပါ။
-- **(ဂ)** ထမင်းသည် နူးနူးနပ်နပ် ကျက်ပါ၏လော။
-- **(ဃ)** သူငယ်မသည် သင့်တော်အောင် ထိုင်နေ၏။
+- **(က)** သင်သည် ချမ်းသာစွာ အိမ်ရ၏လော။你幸福的睡觉的吗？
+- **(ခ)** ကျွန်ုပ်သည် ချမ်းသာစွာ နေရပါ၏၊ ဆင်းဆင်းရဲရဲ မနေရပါ။我幸福的住，不痛苦的住。
+- **(ဂ)** ထမင်းသည် နူးနူးနပ်နပ် ကျက်ပါ၏လော။饭煮熟了吗？
+- **(ဃ)** သူငယ်မသည် သင့်တော်အောင် ထိုင်နေ၏။小女孩坐在合适的地方。
 
 **<center>ကြည့်ရှုရန်</center>**
->ကြိယာကို အတူးပြုသောပုဒ်ကို **“ကြိယာဝိသေသန”** ဟုခေါ်၏၊ “သုခံ သယတိ”၌ သုခံသည် အိမ်ခြင်းကြိယာကို အတူးပြု၏၊ “ချမ်းသာစွာ+အိပ်ရသည်၊ ဆင်းဆင်းရဲရဲ မအိမ်ရ” ဟူလို။
+>ကြိယာကို အတူးပြုသောပုဒ်ကို **“ကြိယာဝိသေသန”** ဟုခေါ်၏၊ “sukhaṃ sayati”၌ သုခံသည် အိမ်ခြင်းကြိယာကို အတူးပြု၏၊ “ချမ်းသာစွာ+အိပ်ရသည်၊ ဆင်းဆင်းရဲရဲ မအိမ်ရ” ဟူလို။
 
->ပစ္စ-ကျက်။ ။နိသီဒ-ထိုင်။ ။သုခံ-ချမ်းသာစွာ၊(ချမ်းချမ်းသာသာ)။ ။ဒုက္ခံ-ဆင်းရဲစွား၊(ဆင်းဆင်းရဲရဲ)။ ။မုဒုံ-နူးညံ့စွာ=နူးနပ်စွာ (နူးနူးညံ့ညံ့+နူးနူးနပ်နပ်)။ ဤပုဒ်တို့ကို ပထမန္တ ဝိသေသနဟုလည်း ဆိုကြသေး၏။
+>pacca-ကျက်熟။ ။nisīda-ထိုင်坐။ ။sukhaṃ-ချမ်းသာစွာ幸福的၊(ချမ်းချမ်းသာသာ幸幸福福)။ ။dukkhaṃ-ဆင်းရဲစွား痛苦၊(ဆင်းဆင်းရဲရဲ)။ ။muduṃ-နူးညံ့စွာ熟=နူးနပ်စွာ烂熟 (နူးနူးညံ့ညံ့+နူးနူးနပ်နပ်)။ ဤပုဒ်တို့ကို ပထမန္တ ဝိသေသနဟုလည်း ဆိုကြသေး၏။
 
->ဧကမန္တံ-သင့်တင့်လျောက်ပတ်စွာ (သင့်တင့်သောအရပ် အဖို့ ၌)။
+>ekamantaṃ-သင့်တင့်လျောက်ပတ်စွာ (သင့်တင့်သောအရပ် အဖို့ ၌)合适的地方။
 
 ## <center>(ခ) ဒုတိယာ ကြိယာဝိသေသန</center>
-- **၁။** မနုဿာ သီဃံ ဂစ္ဆတိ။ 
-- **၂။** သမဏာ သဏီကံ ဂစ္ဆန္တိ။ 
-- **၃။** ဝိသာခါ နာမ ကညာ သဏိကံ အာဂစ္ဆတိ။ 
-- **၄။** ဗာလာ ကညာယော သီဃံ သီဃံ အာဂစ္ဆန္တိ။
-- **၅။** သာမဏေရာ ပရိမဏ္ဍလံ နိဝါသေန္တိ၊ ပရိမဏ္ဍလံ ပါရုပန္တိ။
-- **၆။** သမဏာ ကာယပ္ပစာလကံ န ဂစ္ဆန္တိ။ 
-- **၇။** သမဏာ သုရုသုရုကာရကံ န ဘုဉ္ဇန္တိ။
+- **၁။** manussā sīghaṃ gacchati။ 
+- **၂။** samaṇā saṇīkaṃ gacchanti။ 
+- **၃။** visākhā nāma kaññā saṇikaṃ āgacchati။ 
+- **၄။** bālā kaññāyo sīghaṃ sīghaṃ āgacchanti။
+- **၅။** sāmaṇerā parimaṇḍalaṃ nivāsenti， parimaṇḍalaṃ pārupanti။
+- **၆။** samaṇā kāyappacālakaṃ na gacchanti။ 
+- **၇။** samaṇā surusurukārakaṃ na bhuñjanti။
 
 ---
 
-- **(င)** သင်တို့သည် ဖြေးဖြေး လာကြလော၊ လျင်စွာ မလာကြနှင့်။
-- **(စ)** သင်တို့သည် အဝန်းညီစွာ မဝတ်ကြ, မရမ်းကြ။
-- **(ဆ)** သင်တို့သည် ရှရူး ရှရူး မြည်အောင် စားကြသည်။
+- **(င)** သင်တို့သည် ဖြေးဖြေး လာကြလော၊ လျင်စွာ မလာကြနှင့်你们慢慢的来不要快快的来။
+- **(စ)** သင်တို့သည် အဝန်းညီစွာ မဝတ်ကြ, မရမ်းကြ你们不要好好穿和披衣服။
+- **(ဆ)** သင်တို့သည် ရှရူး ရှရူး မြည်အောင် စားကြသည်။你们苏噜苏噜吃。
 
 **<center>ကြည့်ရှုရန်</center>**
->နိပါသေ-ဝတ်။ ။ပါရုပ-ရုံ,ခြုံ,ရမ်း။ ။ပရိမဏ္ဍလံ-ထက်ဝန်းကျင်ဝန်းဝိုင်းစွာ(အဝန်းညီစွား)။
+>nipāse-ဝတ်။ ။pārupa-ရုံ,ခြုံ,ရမ်း။ ။parimaṇḍalaṃ-ထက်ဝန်းကျင်ဝန်းဝိုင်းစွာ(အဝန်းညီစွား)။
 
->ကာယပ္ပစာလကံ-ကိုယ်ကို လှုပ်၍လှုပ်၍။ ။သုရုသုရုကာရကံ-ရှုပ်ရှုပ် အသံကိုပြု၍ (ရှရူး ရှရူး မြည်အောင်း)။ ။သီဃံ-လျင်စွာ(လျင်လျင်မြန်မြန်)။ ။သဏိကံ-ဖြေးဖြေး (နှေးနှေး)။
+>kāyappacālakaṃ-ကိုယ်ကို လှုပ်၍လှုပ်၍摇身။ ။surusurukārakaṃ-ရှုပ်ရှုပ် အသံကိုပြု၍ 苏噜苏噜声(ရှရူး ရှရူး မြည်အောင်း)။ ။sīghaṃ-လျင်စွာ快(လျင်လျင်မြန်မြန်)။ ။saṇikaṃ-ဖြေးဖြေး 慢(နှေးနှေး)။
