--- a/dutiya/4.tutiya_vibhanka.md
+++ b/dutiya/4.tutiya_vibhanka.md
@@ -1,55 +1,55 @@
 ## <center>၌-ဟု ပေးရသော ဒုတိယာဝိဘတ်နက်</center>
-- **၁။** ဧကံ သမယံ ဘဂဝါ ရာဇဂဟေ ဝိဟရတိ ဂိဇ္ဈကူဋေ ပဗ္ဗတေ။
-- **၂။** သမဏာ ပုဗ္ဗဏှသမယံ ဂါမံ ပိဏ္ဍာယ ပဝိသန္တိ။
-- **၃။** ပုရိဿာ အဂါရံ အဇ္ဈာဝသတိ။
-- **၄။** မနုဿာ ဧကမန္တံ နိသီဒန္တံ။
+- **၁။** ekaṃ samayaṃ bhagavā rājagahe viharati gijjhakūṭe pabbate။
+- **၂။** samaṇā pubbaṇaှsamayaṃ gāmaṃ piṇḍāya pavisanti။
+- **၃။** purissā agāraṃ ajjhāvasati။
+- **၄။** manussā ekamantaṃ nisīdantaṃ။
 
 ---
 
-- **(က)** အခါတစ်ပါးဝယ် ငါသည် မန္တလေးမြို့ ၌ နေ၏။
-- **(ခ)** သင်တို့သည် နံနက်အခါ၌ မြို့သို့ ဆွမ်းခံ ဝင်ကြ၏။
-- **(ဂ)** ငါသည် ဂန္ဓာရုံကျောင်းတိုက်၌ နေ၏။
-- **(ဃ)** ငါတို့သည် တစ်ခုသော အရပ်အဖို့ ၌ ထိုင်နေကြ၏။
+- **(က)** အခါတစ်ပါးဝယ် ငါသည် မန္တလေးမြို့ ၌ နေ၏။有一天，我住在曼德勒。
+- **(ခ)** သင်တို့သည် နံနက်အခါ၌ မြို့သို့ ဆွမ်းခံ ဝင်ကြ၏။你们早上进城市托钵。
+- **(ဂ)** ငါသည် ဂန္ဓာရုံကျောင်းတိုက်၌ နေ၏။我在寺院住。
+- **(ဃ)** ငါတို့သည် တစ်ခုသော အရပ်အဖို့ ၌ ထိုင်နေကြ၏။我们在一个地方坐。
 
 **<center>ကြည့်ရှုရန်</center>**
->ပဝိသ-ဝင်။ ။အဇ္ဈာဝသ-နေ။ ။နိသီဒ-ထိုင်။ ။ဧကံ သမယံ-တစ်ခုသော အခါ၌ (အခါတစ်ပါးဝယ်)။ ။ပုဗ္ဗဏှသမယံ-နံနက်အခါ၌။ (သမယော-အခါ)။ ။အဂါရံ-အိမ်၌။
+>pavisa-ဝင်进入။ ။ajjhāvasa-နေ住။ ။nisīda-ထိုင်坐။ ။ekaṃ samayaṃ-တစ်ခုသော အခါ၌ (အခါတစ်ပါးဝယ်)在一个时间段။ ။pubbaṇhasamayaṃ-နံနက်အခါ၌早上။ (သမယော-အခါ)။ ။agāraṃ-အိမ်၌家里။
 
->ဧကမန္တံ-ဧက+အန္တံ-တစ်ခုသော+အရပ်အဖို့ ၌၊[“သင့်တင့်လျေက်ပတ်စွာ” ဟုကြိယာဝိသေသနအနက်လည်း ပေးခဲ့၏။] ဂိဇ္ဈကူဋေ-ဂိဇ္ဈကုဋ်မည်သော၊ ပဗ္ဗတေ-တောင်၌။
+>ekamantaṃ-eka+antaṃ-တစ်ခုသော一个+အရပ်အဖို့ ၌地方၊[“သင့်တင့်လျေက်ပတ်စွာ合适的地方” ဟုကြိယာဝိသေသနအနက်လည်း ပေးခဲ့၏။] gijjhakūṭe-ဂိဇ္ဈကုဋ်မည်သော叫做鹫峰၊ pabbate-တောင်၌山။
 
 ## <center>ပတ်လုံး-ဟု ပေးရသော</center>
 **<center>ကာလအစ္စန္တ သံယောဂ</center>**
 |  |  |
 | - | - |
-|**၁။** မာယံ မံသောဒနော ဟောတိ။ |**၂။** သဗ္ဗကာလံ ဝိဟာရော ရမဏီယော။ 
-|**၃။** တိယာမံ သယတိ။|**၄။** ဣမသ္မိံ ဝိဟာရေ ဣမံ တေမာသံ ဝဿံ ဥပေမိ။|
+|**၁။** māyaṃ maṃsodano hoti။ |**၂။** sabbakālaṃ vihāro ramaṇīyo။ 
+|**၃။** tiyāmaṃ sayati။|**၄။** imasmiṃ vihāre imaṃ temāsaṃ vassaṃ upemi။|
 
 ---
-- **(က)** တစ်လပတ်လုံး ဆွမ်း ရှိ၏။ 
-- **(ခ)** မြို့သည် အခါခပ်သိမ်း ပျော်စရာ ကောင်း၏။
-- **(ဂ)** ကလေးသည် ညဉ့်သုံယာမ်ပတ်လုံး အိပ်၏။
-- **(ဃ)** ငါသည် ဤကျောင်း၌တစ်လပတ်လုံး နေ၏။
+- **(က)** တစ်လပတ်လုံး ဆွမ်း ရှိ၏။ 一个月有饭
+- **(ခ)** မြို့သည် အခါခပ်သိမ်း ပျော်စရာ ကောင်း၏။大多时候城市快乐。
+- **(ဂ)** ကလေးသည် ညဉ့်သုံယာမ်ပတ်လုံး အိပ်၏။小孩晚上期间在睡觉。
+- **(ဃ)** ငါသည် ဤကျောင်း၌တစ်လပတ်လုံး နေ၏။我在这寺院住三个月。
 
 **<center>ကြည့်ရှုရန်</center>**
->အစ္စန္တ=အဆက်မပြတ်+သံယောဂ=ယှဉ်စပ်ခြင်း။ [အချိန်ကာလဖြစ်စေ, ခရီးအဓွန့်ဖြစ်စေ, ထမင်းစသော အရာဝတ္ထုဒြပ်နှင့်လည်းကောင်း, သွားခြင်းသော ကြိယာနှင့်လည်းကောင်း, မွေ့လျော်ဖွယ်စသောဂုဏ်နှင့်လည်းကောင်း အဆက်မပြတ်(အကြားမလပ်) ယှဉ်ခြင်းကို **“အစ္စန္တသံယောဂအနက်”** ဟုခေါ်၏။]
+>accanta=အဆက်မပြတ်坚持不断+saṃyoga=ယှဉ်စပ်ခြင်း比较။ [အချိန်ကာလဖြစ်စေ, ခရီးအဓွန့်ဖြစ်စေ, ထမင်းစသော အရာဝတ္ထုဒြပ်နှင့်လည်းကောင်း, သွားခြင်းသော ကြိယာနှင့်လည်းကောင်း, မွေ့လျော်ဖွယ်စသောဂုဏ်နှင့်လည်းကောင်း အဆက်မပြတ်(အကြားမလပ်) ယှဉ်ခြင်းကို **“အစ္စန္တသံယောဂအနက်”** ဟုခေါ်၏။]
 
->ဤပုံစံများသည် ကာလအစ္စန္တသံယောဂပုံစံများတည်း၊ “တစ်လပတ်လုံး=တစ်လလုံလုံ” ဟု အနက်ပေး၏၊ရမဏီယော-မွေ့လျော်အပ်၏=မွေ့လျော်ဖွယ်ကောင်း၏=ပျော်စရာကောင်း၏၊ ဥပေ-ကပ်ရောက်။
+>ဤပုံစံများသည် ကာလအစ္စန္တသံယောဂပုံစံများတည်း၊ “တစ်လပတ်လုံး=တစ်လလုံးလုံး整个月” ဟု အနက်ပေး၏၊ရမဏီယော-မွေ့လျော်အပ်၏=မွေ့လျော်ဖွယ်ကောင်း၏=ပျော်စရာကောင်း၏开心၊ ဥပေ-ကပ်ရောက်染上။
 
->မံသောဒနော(မံသ+ဩဒနော)-အသားထမင်း (အသားရောသောထမင်း = သားပြွမ်းထမင်း=ဒန်ပေါက်ထမင်း)။ ။သဗ္ဗကာလံ-အလုံစုံသော ကာလပတ်လုံး(အခါခပ်သိမ်း)။ ။တိယာမံ-ညဉ့်သုံယာမ်ပတ်လုံး။ ။ဣမံ တေမာသံ-ဤသုံးလပတ်လုံး။ ။ဝဿံ-မိုးမခါ၌ နေခြင်းသို့ (မိုးခိုးခြင်းသို့)။
+>maṃsodano(maṃsa+odano)-အသားထမင်း肉饭 (အသားရောသောထမင်း肉和饭 = သားပြွမ်းထမင်း肉和饭混合=ဒန်ပေါက်ထမင်း炒饭)။ ။sabbakālaṃ-အလုံစုံသော ကာလပတ်လုံး整个时期(အခါခပ်သိမ်း)။ ။tiyāmaṃ-ညဉ့်သုံယာမ်ပတ်လုံး晚上时期။ ။imaṃ temāsaṃ-ဤသုံးလပတ်လုံး။三个月时期 ။vassaṃ-မိုးခါ၌ နေခြင်းသို့雨季 (မိုးခိုးခြင်းသို့)။
 
 ## <center>တိုင်တိုင်-ဟု ပေးရသော</center>
 **<center>အဒ္ဓါအစ္စန္တ သံယောဂ</center>**
 |  |  |
 | - | - |
-**၁။** ယောဇနံ ဝနရာဇိ ပကာသတိ။ 
-**၂။** ဂါဝုတိ ပဗ္ဗတော ဒီဃော။
-**၃။** ကောသံ သဇ္ဈယတိ။[“သဇ္ဈာ” ဟု မရှိစေရ။]
+**၁။** yojanaṃ vanarāji pakāsati။ 
+**၂။** gāvuti pabbato dīgho။
+**၃။** kosaṃ sajjhayati။[“sajjhā” ဟု မရှိစေရ။]
 
 ---
-- **(က)** တစ်ယူဇနာတိုင်တိုင် (တစ်ဘူဇနာတိုင်အောင်) တောတန်းရှည်၏။
-- **(ခ)** ငါတို့သည် တစ်ဂါဝုတ်တိုင်တိုင် ရှည်သော တောင်ကိုမြင်ကြရ၏။
-- **(ဂ)** သင်တို့သည် တစ်ကောသတိုင်တိုင် သွားကြကုန်၏။
+- **(က)** တစ်ယူဇနာတိုင်တိုင် (တစ်ယူဇနာတိုင်အောင်) တောတန်းရှည်၏။长整整一由旬的？？？
+- **(ခ)** ငါတို့သည် တစ်ဂါဝုတ်တိုင်တိုင် ရှည်သော တောင်ကိုမြင်ကြရ၏။我们看到整整一牛呼高的山
+- **(ဂ)** သင်တို့သည် တစ်ကောသတိုင်တိုင် သွားကြကုန်၏။你们走了整整1/4由旬。
 
 **<center>ကြည့်ရှုရန်</center>**
->ဤပုံစံများသည် အဒ္ဓါ (အဓန့်=ခရီး)အတွက် အစ္စန္တသံယောဂများတည်း၊”တိုင်တိုင်=တိုင်အောင်” ဟု အနက်ပေးရ၏။ ။ပကာသ-ထင်ရှား။ ။သဇ္ဈယ-သရဇ္ဈယ်=ရွတ်ဆို=‌စာအံ။
+>ဤပုံစံများသည် အဒ္ဓါ (အဓန့်=ခရီး)အတွက် အစ္စန္တသံယောဂများတည်း၊”တိုင်တိုင်整整=တိုင်အောင်直至” ဟု အနက်ပေးရ၏။ ။pakāsa-ထင်ရှား有။ ။sajjhaya-သရဇ္ဈယ်=ရွတ်ဆို=‌စာအံ။
 
->ယောဇနံ-တစ်ယူဇနာတိုင်တိုင် (တစ်ယူဇနာတိုင်အောင်)။ ။ဝနရာဇိ-တောအရေး (တောတန်း)။ ။ကောသံ-တစ်ကောသတိုင်တိုင်။[လေးအပြန် ငါးရာရှိသောခရီးကို “တစ်ကောသ ဝေးသောခရီး” ဟု ခေါ်၏၊ ၄ ကောသရှိသော ခရီးကို “တစ်ဂါဝုတ်” ဟု ခေါ်၏၊ လေးတစ်ပြန်လျှင် ၄ တောင်ရှိ၏။]
+>yojanaṃ-တစ်ယူဇနာတိုင်တိုင် 整整一由旬(တစ်ယူဇနာတိုင်အောင်)။ ။vanarāji-တောအရေး (တောတန်း)။ ။kosaṃ-တစ်ကောသတိုင်တိုင်整整1/4由旬။[လေးအပြန် ငါးရာရှိသောခရီးကို “တစ်ကောသ ဝေးသောခရီး” ဟု ခေါ်၏၊ ၄ ကောသရှိသော ခရီးကို “တစ်ဂါဝုတ်” ဟု ခေါ်၏၊ လေးတစ်ပြန်လျှင် ၄ တောင်ရှိ၏။]
