--- a/dutiya/6.ankadariya_tnkadara.md
+++ b/dutiya/6.ankadariya_tnkadara.md
@@ -1,19 +1,19 @@
 ## <center>အနာဒရိယ-အနာဒရ</center>
 **<center>[သည်-စဉ်ဟု အနက်ပေး။]</center>**
 
-- **၁။** ဒါရကဿ ရုဒတော ပိတာ ပဗ္ဗဇတိ။
-- **၂။** ဒါရကေ ရုဒန္တသ္မိံ ပိတာ ပဗ္ဗဇတိ။
-- **၃။** ဝေဿန္တရဿ ပေက္ခတော ဇူဇကော ဒါရကေ နေတိ။
-- **၄။** မဟာဇနေ ပေက္ခမာနေ မစ္စု ဂိလာနံ နေတိ။
+- **၁။** dārakassa rudato pitā pabbajati။
+- **၂။** dārake rudantasmiṃ pitā pabbajati။
+- **၃။** vessantarassa pekkhato jūjako dārake neti။
+- **၄။** mahājane pekkhamāne maccu gilānaṃ neti။
 
 ---
 
-- **(က)** ကလေးသည် ငိုနေစဉ်(ကလေး ငိုနေတုန်း) မိခင်သည် အိမ်မှထွက်သွား၏။[ဆဋ္ဌီ-သတ္တမီ ဝါကျ  ၂_မျိုး စီပါ။ ]
-- **(ခ)** ရဟန်းသည် ကြည့်နေစဉ် သူခိုးသည် သပိတ်သင်္ကန်းကိုဆောင်ယူသွား၏။ [ဆဋ္ဌီ-သတ္တမီ ဝါကျ  ၂-မျိုး စီပါ။ ]
-- **(ဂ)** ဆရာသည် စကားပြောနေစဉ် တပည့်တော်သည် အိပ်နေကြကုန်၏။
+- **(က)** ကလေးသည် ငိုနေစဉ်(ကလေး ငိုနေတုန်း) မိခင်သည် အိမ်မှထွက်သွား၏။[ဆဋ္ဌီ-သတ္တမီ ဝါကျ  ၂_မျိုး စီပါ။ ]小孩哭的是母亲从家里出去
+- **(ခ)** ရဟန်းသည် ကြည့်နေစဉ် သူခိုးသည် သပိတ်သင်္ကန်းကိုဆောင်ယူသွား၏။ [ဆဋ္ဌီ-သတ္တမီ ဝါကျ  ၂-မျိုး စီပါ။ ]比库看着小偷偷走钵和袈裟。
+- **(ဂ)** ဆရာသည် စကားပြောနေစဉ် တပည့်တော်သည် အိပ်နေကြကုန်၏။老师在说话的时候弟子在睡觉。
 
 **<center>ကြည့်ရှုရန်</center>**
->ပဗ္ဗဇ-ရဟန်းပြု။ ။နေတိ-ဆောင်သူသွား၏။ ။ရုဒတော,ရုဒန္တသ္မိံ-ငိုနေစဉ် (ငိုနေတုန်း)။ ။ပေက္ခတော,ပေက္ခမာနေ-ကြည့်နေစဉ် (ကြည့်နေတုန်း)။
+>pabbaja-ရဟန်းပြု成为比库။ ။neti-ဆောင်ယူသွား၏偷走။ ။rudato,rudantasmiṃ-ငိုနေစဉ်哭的时候 (ငိုနေတုန်း)။ ။pekkhato,pekkhamāne-ကြည့်နေစဉ် (ကြည့်နေတုန်း)看着။
 
->ဝေဿန္တရော- ဝေဿန္တရာမင်း။ ။ဇူဇကော- ဇူဇကာပုဏ္ဏား။ မဟာဇ‌နော- များစွာသော လူအ‌ပေါင်း (လူအများ)။ ။မစ္စု-သေမင်း။ ။ဂိလာနော-မကျန်းမာသူ (လူမမာ)။
+>vessantaro- ဝေဿန္တရာမင်းvessantara王။ ။jūjako- ဇူဇကာပုဏ္ဏားjūjaka婆罗။ mahāja‌no- များစွာသော လူအ‌ပေါင်း 多出的人们(လူအများ)။ ။maccu-သေမင်း阎罗王။ ။gilāno-မကျန်းမာသူ 不舒服的人(လူမမာ)။
 
