--- a/dutiya/8.kanhovakya.md
+++ b/dutiya/8.kanhovakya.md
@@ -1,10 +1,10 @@
 ## <center>ကံဟောဝါကျ</center>
 **[ဆောင်]**<br>
-- **၁။** ကတ္တား တတိယာ, ကံ ပဠမာ, ရံခါတွေ့ရလျှင်။
+- **၁။** ကတ္တား တတိယာ, ကံ ပဌမာ, ရံခါတွေ့ရလျှင်။
 - **၂။** ကြိယာသဘော, အပ်ဟုနှော, ကံဟောဝါကျတွင်။
 - **၃။** အစ ၂ သွယ်, သူ့တွက်ချက်၊ အလယ် ၂ လုံး၊ သင့်တွက်သုံး၊ အဆုံး ၂ ချက်, ငါ့အတွက်၊ မှတ်ချက် ကံနှင့်ယှဉ်။
 
-**ဝိဘတ်။** ။တေ-အန္တေ , သေ-ဝှေ , ဧ-မှေ။ ဂစ္ဆီယတေ-ဂစ္ဆီယန္တေ။ ဂစ္ဆီယသေ-ဂစ္ဆီယဝှေ။ ဂစ္ဆီယေ-ဂစ္ဆီယာမှေ။
+**ဝိဘတ်။** ။te-ante , se-vhe , e-mhe။ gacchīyate-gacchīyante။ gacchīyase-gacchīyavhe။ gacchīye-gacchīyāmhe။
 
 **<center>ကြည့်ရှုရန်</center>**
 >ကတ္တားဟော ဝါကျ၌ “ပုရိသော မဂ္ဂံ ဂစ္ဆတိ” ဟု ကတ္တား၌ ပဌမာဝိဘတ်,ကံ၌ ဒုတိယာဝိဘတ်ဖြင့် ပြခဲ၏၊ ဤ ကံဟောဝါကျ၌ထိုသို့ မရှိစေဘဲ ကတ္တား၌, “ပုရိသေန” ဟု တတိယာဝိဘတ်ဖြင့်, ကံ၌ “မဂ္ဂေါ” ဟု ပဌမာဝိဘတ်ဖြင့် ရှိစေရသည်။
@@ -16,16 +16,16 @@
 ## <center>ကံဟောဝါကျပုံစံ</center>
 |  |  |  |  |  |  |
 | - | - | - | - | - | - |
-|**၁။** ပုရိသေန| မဂ္ဂေါ| ဂစ္ဆီယတိ။|**၂။** ပုရိသေန| မဂ္ဂါ|ဂစ္ဆီယန္တေ။|
-|**၃။** ပုရိသေန| တွံ| ဂစ္ဆီယသေ။|**၄။** ပုရိသေန| တုမှေ |ဂစ္ဆီယဝှေ။|
-|**၅။** ပုရိသေန| အဟံ| ဂစ္ဆီယေ။ |**၆။** ပုရိသေန| မယံ |ဂစ္ဆီယာမှေ။|
+|**၁။** purisena| maggo| gacchīyati။|**၂။**purisena| maggā|gacchīyante။|
+|**၃။** purisena| thaṃ| gacchīyase။|**၄။** purisena| tumhe|gacchīyavhe။|
+|**၅။** purisena| ahaṃ| gacchīye။ |**၆။**purisena| mayaṃ |gacchīyāmhe။|
 
-- **၁။** ပုရိသေန-ယောကျ်ားသည်၊ မဂ္ဂေါ-လမ်းကို၊ ဂစ္ဆီယတေ-သွားအပ်၏။
-- **၂။** မဂ္ဂါ-လမ်းတို့ကို၊ ဂစ္ဆီယ‌န္တေ-သွားအပ်ကုန်၏။
-- **၃။** တွံ-သင်လမ်းကို၊ ဂစ္ဆီယသေ-သွားအပ်၏။
-- **၄။** တုမှေ-သင်လမ်းတို့ကို၊ ဂစ္ဆီယဝှေ-သွားအပ်ကုန်၏။
-- **၅။** အဟံ-ငါလမ်းကို၊ ဂစ္ဆီယေ-သွားအပ်၏။
-- **၆။** မယံ-ငါလမ်းတို့ကို၊ ဂစ္ဆီယာမှေ-သွားအပ်ကုန်၏။
+- **၁။** purisena-ယောကျ်ားသည်男人၊ maggo-လမ်းကို路၊ gacchīyate-သွားအပ်၏走။
+- **၂။** maggā-လမ်းတို့ကို公路၊ gacchīya‌nte-သွားအပ်ကုန်၏走။
+- **၃။** thaṃ-သင်လမ်းကို你的路၊ gacchīyase-သွားအပ်၏走။
+- **၄။** tumhe-သင်လမ်းတို့ကို你们的路၊ gacchīyavhe-သွားအပ်ကုန်၏走။
+- **၅။** ahaṃ-ငါလမ်းကို我的路၊ gacchīye-သွားအပ်၏走။
+- **၆။** mayaṃ-ငါလမ်းတို့ကို我们的路၊ gacchīyāmhe-သွားအပ်ကုန်၏走။
 
 **<center>ကြည့်ရှုရန်</center>**
 >**အမှာ။** ကံဟောဝါကျ၌ ကံနှင့် ကြိယာသာ ဧကဝုစ်ချင်း,ဗဟုဝုစ်ချင်း တူစေရသည်၊ ကတ္တားကား ဧကဝုစ်နေနေ, ဗဟုဝုစ်နေနေ နေနိုင်၏၊ ကြိယာနှငိ့ ကံသာ သူဖြင့် သူချင်း, သင်ဖြင့် သင်ချင်း,ငါဖြင့် ငါချင်း တူစေရသည်၊ ကတ္တားကား သူ - သင် - ငါ ၃ မျိုးလုံး နေနိုင်သည်၊ နောက် သင်ခနိးစား ပုံစံများကို ကြာည့်။
@@ -33,47 +33,47 @@
 ## <center>ကတ္တား ၆ မျိုး,ကံ ၁ မျိုး</center>
 |  |  |  |  |  |  |
 | - | - | - | - | - | - |
-|**၁။** ပုရိသေန|မဂ္ဂေါ |ဂစ္ဆီယတေ။|**၂။** ပုရိသေဟိ  |မဂ္ဂေါ| ဂစ္ဆီယတေ။|
-|**၃။** တယာ| မဂ္ဂေါ| ဂစ္ဆီယတေ။| **၄။** တုမှေဟိ |မဂ္ဂေါ| ဂစ္ဆီတေ။|
-|**၅။** မယာ| မဂ္ဂေါ |ဂစ္ဆီတေ။| **၆။** အမှေဟိ |မဂ္ဂေါ |ဂစ္ဆီတေ။|
-|**၇။** . . .  . . . | မဂ္ဂေါ | ဂစ္ဆီယတေ။| **၈။** . . .  . . . |မဂ္ဂါ| ဂစ္ဆီယန္တေ။|
-|**၉။** . . .  . . .| တွံ |ဂစ္ဆီယသေ။| **၁၀။** . . .  . . .| တုမှေ| ဂစ္ဆီယဝှေ။|
-|**၁၁။** . . .  . . .| အဟံ |ဂစ္ဆီယေ။| **၁၂။** . . .  . . . |မယံ |ဂစ္ဆီယမှေ။|
+|**၁။** purisena|maggo |gacchīyate။|**၂။** purisehi  |maggo| gacchīyate။|
+|**၃။** tayā| maggo| gacchīyate။| **၄။** tumhehei |maggo| gacchīte။|
+|**၅။** mayā| maggo |gacchīte။| **၆။** amhehei |maggo |gacchīte။|
+|**၇။** . . .  . . . | maggo | gacchīyate။| **၈။** . . .  . . . |maggā| gacchīyante။|
+|**၉။** . . .  . . .| thaṃ |gacchīyase။| **၁၀။** . . .  . . .| tumhe| gacchīyavhe။|
+|**၁၁။** . . .  . . .| ahaṃ |gacchīye။| **၁၂။** . . .  . . . |mayaṃ |gacchīyamhe။|
 
 **<center>ကြည့်ရှုရန်</center>**
->**အမှာ။** ပုရိသေန စသော ကတ္တား ၆ မျိုးကို အလဲအလှယ် ထားနိုင်သော်လည်း ကံနှင့် ကြိယာတို့ကာ “မဂ္ဂေါ ဂစ္ဆီယတ္တေ” ဟုသာထားရပုံကို ကြည့်၍ “မဂ္ဂါ ဂစ္ဆီယန္တေ , တွံ ဂစ္ဆီယသေ, တုမေ ဂစ္ဆီယဝေ, အဟံ ဂစ္ဆီယေ , မယံ ဂစ္ဆီယာမှေ” တို့ ၌လည်း ပုရိသေန စသော ကတ္တား ၆ မျိုးတွင် အလိုရှိရာ ကတ္တားကို ထားနိုင်သည်ဟု မှတ်ပါ၊ နောက်လာမည့် အခန်းများ၌ ကတ္တား အမျိုးမျိုးထား၍ ပုံစံပြပါမည်။
+>**အမှာ။** purisena စသော ကတ္တား ၆ မျိုးကို အလဲအလှယ် ထားနိုင်သော်လည်း ကံနှင့် ကြိယာတို့ကာ “မဂ္ဂေါ ဂစ္ဆီယတ္တေ” ဟုသာထားရပုံကို ကြည့်၍ “မဂ္ဂါ ဂစ္ဆီယန္တေ , တွံ ဂစ္ဆီယသေ, တုမေ ဂစ္ဆီယဝေ, အဟံ ဂစ္ဆီယေ , မယံ ဂစ္ဆီယာမှေ” တို့ ၌လည်း purisena စသော ကတ္တား ၆ မျိုးတွင် အလိုရှိရာ ကတ္တားကို ထားနိုင်သည်ဟု မှတ်ပါ၊ နောက်လာမည့် အခန်းများ၌ ကတ္တား အမျိုးမျိုးထား၍ ပုံစံပြပါမည်။
 
 ## <center>လေ့ကျင့်ခန်း</center>
-- **၁။** ကညာယ ဘတ္တံ ပစ္စတေ။ 
-- **၂။** ဗုဒ္ဓေန ဓမ္မော ဒေသီယတေ။
-- **၃။** တယာ ဘတ္တာနိ ပစ္စန္တေ။
-- **၄။** မယာ ဒါနေန ဘောဂါ လဗ္ဘန္တေ။ 
-- **၅။** တုမှေဟိသီလေနသုခါနိ လဗ္ဘန္တေ။ 
-- **၆။** သမဏေဟိ ဘာဝနာယ နိဗ္ဗာနံ ပါပီယတေ။ 
-- **၇။** ပဏ္ဍိတေဟိ ဝိနာ ဗာလေဟိ ဝိဟာရော အာဂစ္ဆီယတေ။
-- **၈။** အမှေဟိ သံဃဿ ဒါနာနိ ဒီယန္တေ။ 
-- **၉။** သိဿေဟိ အာစရိယဿ ဆတ္တံ ဓာရီယတေ။
-- **၁၀။** ဗုဒ္ဓေန ‌ဒေဝမနုဿာနံ ဓမ္မော ဒေသီယတေ။ 
-- **၁၁။** သိဿေဟိ အာစရိယတော သိပ္ပံ ဥဂ္ဂယှတေ။
-- **၁၂။** ဗုဒ္ဓေန သတ္တာနံ အတ္တာယ ဓမ္မော ဒေသီယတေ။
-- **၁၃။** မယာ ပိဏ္ဍာယ ဂါမော ဂစ္ဆီယတေ။
-- **၁၄။** ပုရိသေဟိ  အာဂန္တုကာနံ ဘတ္တံ ဒီယတေ။
+- **၁။** kaññāya bhattaṃ paccate။ 
+- **၂။** buddhena dhammo desīyate။
+- **၃။** tayā bhattāni paccante။
+- **၄။** mayā dānena bhogā labbhante။ 
+- **၅။** tumheheisīlenasukhāni labbhante။ 
+- **၆။**samaṇehi bhāvanāya nibbānaṃ pāpīyate။ 
+- **၇။** paṇḍitehi vinā bālehi vihāro āgacchīyate။
+- **၈။** amhehei saṅghassa dānāni dīyante။ 
+- **၉။** sissehi ācariyassa chattaṃ dhārīyate။
+- **၁၀။** buddhena ‌devamanussānaṃ dhammo desīyate။ 
+- **၁၁။** sissehi ācariyato sippaṃ uggayhate။
+- **၁၂။** buddhena sattānaṃ attāya dhammo desīyate။
+- **၁၃။** mayā piṇḍāya gāmo gacchīyate။
+- **၁၄။** purisehi  āgantukānaṃ bhattaṃ dīyate။
 
->**အမှာ။** ပြအပ်ခဲ့သော ကတ္တုဝါကျများမှ ယူ၍ ကမ္မဝါကျ ပြုလုပ်ထား၏၊ ပစ္စ-ချက်အပ်။ ။လဗ္ဘ-ရအပ်။ ။ဒေသီယ-ဟောအပ်။ ။ပါပီယ-ရောက်အပ်။ ။ဒီယ-ပေးအပ်။ ။ဓာရီယ-ဆောင်းအပ်။ ။ဥဂ္ဂယှ-သင်ယူအပ်။ ။တွံ-တုမှေ-အဟံ-မယံ- ဟူသော ကံများကိုထည့်သွင်း၍ “ပစ္စသေ , ပစ္စဝှေ , ပစ္စေ , ပစ္စာမှေ”စသော ကြိယာတို့ကို စည်းကမ်းကျအောင် ထားတတ်ပါစေ။
+>**အမှာ။** ပြအပ်ခဲ့သော ကတ္တုဝါကျများမှ ယူ၍ ကမ္မဝါကျ ပြုလုပ်ထား၏၊ pacca-ချက်အပ်။ ။labbha-ရအပ်။ ။desīya-ဟောအပ်။ ။pāpīya-ရောက်အပ်။ ။dīya-ပေးအပ်။ ။dhārīya-ဆောင်းအပ်။ ။uggayha-သင်ယူအပ်။ ။thaṃ-tumhe-ahaṃ-mayaṃ- ဟူသော ကံများကိုထည့်သွင်း၍ “paccase , paccavhe , pacce , paccāmhe”စသော ကြိယာတို့ကို စည်းကမ်းကျအောင် ထားတတ်ပါစေ။
 
 **<center>ပါဠိစီရန်</center>**
-- **(က)** သတို့သမီးသည် သင်(ထမင်း)ကို ချက်အပ်၏။
-- **(ခ)** မြတ်စွာဘုရားတို့သည် ငါ(တရား)တို့ကို ဟောအပ်ကုန်၏။
-- **(ဂ)** သင်တို့သည် ဒါနကြောင့် ငါ(စည်းစိမ်)ကို ရအပ်၏။
-- **(ဃ)** ငါတို့သည် သီလကြောင့် သင်(သုခ)တို့ကို ရအပ်ကုန်၏။
-- **(င)** ကိုရင်သည် ဘာဝနာကြောင့် နိဗ္ဗာန်သို့ ရောက်အပ်၏။
-- **(စ)** ငါတို့သည် လူမိုက်တို့နှင့် ခွဲ၍ ကျောင်းသို့ လာအပ်၏။
-- **(ဆ)** သင်သည် သံဃာအား အလှူတို့ကို လှူအပ်ကုန်၏။
-- **(ဇ)** ဆရာသည် တပည့်အား ထီးကို မဆောင်းအပ်။
-- **(ဈ)** မြတ်စွာဘာရားသည် သတ္တဝါတို့အား သင်(တရား)ကို ဟောအပ်၏။
-- **(ည)** သင်(တပည့်)တို့သည် ဆရာ့ထံမှ ငါ(အတတ်)ကို သင်ယူအပ်၏။
-- **(ဋ)** ငါတို့သည် ဆွမ်းအလို့ငှာ သင်(ရွာ)သို့ သွားအပ်၏။
-- **(ဌ)** သင်တို့သည် ဧည့်သည်ဖို့ ငါ(ထမင်း)ကို ချက်အပ်၏။
-- **(ဍ)** ဝေဿန္တ ရာမင်းသည် ကြည့်နေစဉ် ဇူဇကာပုဏ္ဏားသည် ကလေးတို့ကို ဆောင်ယူအပ်ကုန်၏။
-- **(ဎ)** ရဟန်းတို့သည် ဆွမ်းစားကုန်ပြီးသော် ယောကျ်ားသည် ရွာသို့ပြန်လာအပ်၏။
+- **(က)** သတို့သမီးသည် သင်(ထမင်း)ကို ချက်အပ်၏။女人煮你的饭。
+- **(ခ)** မြတ်စွာဘုရားတို့သည် ငါ(တရား)တို့ကို ဟောအပ်ကုန်၏။佛陀们讲我们的法。
+- **(ဂ)** သင်တို့သည် ဒါနကြောင့် ငါ(စည်းစိမ်)ကို ရအပ်၏။我获得你们供养的物品
+- **(ဃ)** ငါတို့သည် သီလကြောင့် သင်(သုခ)တို့ကို ရအပ်ကုန်၏။我们因为持戒获得了你们的快乐。
+- **(င)** ကိုရင်သည် ဘာဝနာကြောင့် နိဗ္ဗာန်သို့ ရောက်အပ်၏။？？？？？？？？？？？？？？？？？
+- **(စ)** ငါတို့သည် လူမိုက်တို့နှင့် ခွဲ၍ ကျောင်းသို့ လာအပ်၏။我们和坏人分开来学校。
+- **(ဆ)** သင်သည် သံဃာအား အလှူတို့ကို လှူအပ်ကုန်၏။你供养僧团物品。
+- **(ဇ)** ဆရာသည် တပည့်အား ထီးကို မဆောင်းအပ်။；老师不应该给弟子打伞
+- **(ဈ)** မြတ်စွာဘုရားသည် သတ္တဝါတို့အား သင်(တရား)ကို ဟောအပ်၏။佛陀给你们众生开示
+- **(ည)** သင်(တပည့်)တို့သည် ဆရာ့ထံမှ ငါ(အတတ်)ကို ？？？？？？？？？？？？？？？？？
+- **(ဋ)** ငါတို့သည် ဆွမ်းအလို့ငှာ သင်(ရွာ)သို့ သွားအပ်၏။我们因食物来你的村子。
+- **(ဌ)** သင်တို့သည် ဧည့်သည်ဖို့ ငါ(ထမင်း)ကို 你们为客人煮了我的饭。
+- **(ဍ)** ဝေဿန္တ ရာမင်းသည် ကြည့်နေစဉ် ဇူဇကာပုဏ္ဏားသည် ကလေးတို့ကို ဆောင်ယူအပ်ကုန်၏။？？？？？？？？？？？？
+- **(ဎ)** ရဟန်းတို့သည် ဆွမ်းစားကုန်ပြီးသော် ယောကျ်ားသည် ရွာသို့ပြန်လာအပ်၏။比库们吃晚饭男人从村子回来。
 
