--- a/dutiya/9.tnkapaonkhuo.md
+++ b/dutiya/9.tnkapaonkhuo.md
@@ -3,35 +3,35 @@
 - **၁။** သည်-ပဌမာ, ပုဒ်တွေ့ရာ, ရံခါ “ကို-သို့” ပေး။
 - **၂။** ဒုတိယာပြိုင်, တိုင်တိုင်-ပတ်လုံး, ၌-စွာ သုံးလျက်, ၍လည်းဖက်, အနက် မျိုးစုံပေး။
 
->**၁။** ဗုဒ္ဓေါ, ဗုဒ္ဓါတို့ကဲ့သို့ ပဠမာဝိဘတ် ဆုံးသော ပုဒ်များ၌ “ဘုရားသည်,ကား , က”ဟုပေးရသော်လည်း ပြခဲ့သော ကံဟောဝါကျများ၌ “မဂ္ဂေါ-လမ်းကို၊ ဂါမော-ရွာသို့၊ ဂစ္ဆီယတေ-သွားအပ်၏” ဟု တစ်ခါတစ်ရံ “ကို-သို့” လည်း ပေးရသည်။
+>**၁။** ဗုဒ္ဓေါ, ဗုဒ္ဓါတို့ကဲ့သို့ ပဠမာဝိဘတ် ဆုံးသော ပုဒ်များ၌ “ဘုရားသည်,ကား , က”ဟုပေးရသော်လည်း ပြခဲ့သော ကံဟောဝါကျများ၌ “maggo-လမ်းကို၊ gāmo-ရွာသို့၊ gacchīyate-သွားအပ်၏” ဟု တစ်ခါတစ်ရံ “ကို-သို့” လည်း ပေးရသည်။
 
->**၂။** ဒုတိယာဝိဘတ် ရှိရာ၌ “မဂ္ဂံ-လမ်းကို၊ ဂါမံ-ရွာသို့၊ ဂစ္ဆတိ-သွား၏” ကဲ-သို့“ကိုသို့” ပေးရိုးတည်း၊ တစ်ခါတစ်ရံ၌ကား”မာသံ-တစ်လပတ်လုံး၊ ယောဇနံ-တစ်ယူဇနာတိုင်တိုင်၊ ဧကံသမယံ-တစ်ပါးသော အခါ၌” ဟုလည်းကောင်း “အခါတစ်ပါး၌” ဟုလည်းကောင်း ပေးရ၏။
-ကြိယာဝိသေသန အနက်ပေးရာ၌ “ဧကမန္တံ-သင့်တင့်လျောက်ပတ်စွာ၊ သုခံ-ချမ်းသာစွာ၊ ကာယပ္ပစာလကံ-ကိုယ်ကို လှုပ်၍လှုပ်၍” ဟုပေးရ၏၊ ထို့ပြင်-“သုခံ-ချမ်းချမ်းသာသာ၊ ဒုက္ခံ-ဆင်းဆသ်းရဲရဲ၊ ဧကန္တံ-သင့်တင့်လျေက်ပတ်အောင်၊ သမံ-ညီညီညွတ်ညွတ်၊ ဝိသမံ-မညီမညွတ်” ဟုလည်း ပေးနိုင်ပါသည်။
+>**၂။** ဒုတိယာဝိဘတ် ရှိရာ၌ “maggaṃ-လမ်းကို路၊ gāmaṃ-ရွာသို့村၊ gacchati-သွား၏走” ကဲ-သို့“ကိုသို့” ပေးရိုးတည်း၊ တစ်ခါတစ်ရံ၌ကား。”māsaṃ-တစ်လပတ်လုံး整整一个月၊ yojanaṃ-တစ်ယူဇနာတိုင်တိုင်整整一由旬၊ ekaṃsamayaṃ-တစ်ပါးသော အခါ၌一个时间段” ဟုလည်းကောင်း “အခါတစ်ပါး၌” ဟုလည်းကောင်း ပေးရ၏။
+ကြိယာဝိသေသန အနက်ပေးရာ၌ “ekamantaṃ-သင့်တင့်လျောက်ပတ်စွာ合适၊ sukhaṃ-ချမ်းသာစွာ幸福၊ kāyappacālakaṃ-ကိုယ်ကို လှုပ်၍လှုပ်၍摇身” ဟုပေးရ၏၊ ထို့ပြင်-“sukhaṃ-ချမ်းချမ်းသာသာ幸幸福福၊ dukkhaṃ-ဆင်းဆသ်းရဲရဲ痛痛苦苦၊ ekantaṃ-သင့်တင့်လျေက်ပတ်အောင်合适的၊ samaṃ-ညီညီညွတ်ညွတ်整整齐齐၊ visamaṃ-မညီမညွတ်不整齐” ဟုလည်း ပေးနိုင်ပါသည်။
 
 ---
 - **၃။** တတိယာဖြင့်, သည်-ကြောင့်-နှင့်ဝယ်, အားဖြင့်-သဖြင့်,၌ဘည်း ဆင်,အသင့် ကြည့်၍ပေး။
 - **၄။** စတုတ္ထီမှာ, အားနှင့်ငှာ,ရံခါ ”ဖို့” လည်းပေး။
 
->**၃။** တတိယာဝိဘတ်၏ အနက်ကို “ပါဒေန-ခြေဖြင့်၊ ဂစ္ဆတိ-သွား၏၊ ပုရိသေန-ယောက်ကျ်ားသည်၊ ဂစ္ဆီယတေ-သွားအပ်၏၊ ဒါနေန-ဒါနကြောင့်၊ ဘောဂဝါ-စည်းစိမ်ရှိ၏၊ သံဃေန-သံဃာနှင့်၊ သဒ္ဓိံ-အတူ၊ ဂေါတ္တေန-အနွယ်အားဖြင့်” ဟု ပုံစံပြခဲ့ပြီ။
-ထို အနက်များအပြင်”သမေန-ညီညွတ်သဖြင့်၊ ဓာဝတိ-ပြေး၏၊ ဟတ္ထေန-လက်ဖြင့်၊ ကုဏီ-ကောက်သူ၊ ဧကာဟေန-တစ်ရက်ချင်းဖြင့်၊ ပါယာသိ-အရောက်သွားပြီ၊ တေန သမယေန-ထိုအခါ၌” ဟူသော အနက်များကိုလည်း သင့်သလို ပေးရသေး၏။
+>**၃။** တတိယာဝိဘတ်၏ အနက်ကို “pādena-ခြေဖြင့်脚၊ gacchati-သွား၏走၊ purisena-ယောက်ကျ်ားသည်男人၊ gacchīyate-သွားအပ်၏走၊ dānena-ဒါနကြောင့်因为布施၊ bhogavā-စည်းစိမ်ရှိ၏物品၊ saṅghena-သံဃာနှင့်和僧团၊ saddhiṃ-အတူ一起၊ gottena-အနွယ်အားဖြင့်家族名” ဟု ပုံစံပြခဲ့ပြီ။
+ထို အနက်များအပြင်”samena-ညီညွတ်သဖြင့်平等၊ dhāvati-ပြေး၏跑၊ hatthena-လက်ဖြင့်手၊ kuṇī-ကောက်သူ弯曲၊ ekāhena-တစ်ရက်ချင်းဖြင့်一天၊ pāyāsi-အရောက်သွားပြီ开始၊ tena samayena-ထိုအခါ၌这时候” ဟူသော အနက်များကိုလည်း သင့်သလို ပေးရသေး၏။
 
->**၄။** စတုတ္ထီဝိဘတ် အနက်ကို “သံဃဿ-အား၊ ဒေတိ-လှူ၏၊ အတ္ထာယ-အကျိုးငှာ၊ ဥပ္ပဇ္ဇတိ-၏၊ အာဂန္တုကာနံ-ဧည့်သည်တို့ဖို့(ဧည့်သည်တို့ အကျိုးငှာ-ဧည့်သည်တို့အတွက်) ဘတ္တံ-ထမင်း” ဟု ပုံစံပြခဲ့ပြီ။[“ဖို့”ဟူသော အနက်,”အတွက်”ဟူသောအနက်သည် “၏+အကျိုးငှာ” ဟူသော အနက်နှင့် အဓိပ္ပာယ် အတူပင် ဖြစ်၏။]
+>**၄။** စတုတ္ထီဝိဘတ် အနက်ကို “သံဃဿ-အား僧团၊ deti-လှူ၏供养၊ atthāya-အကျိုးငှာ利益၊ uppajjati-၏生起၊ āgantukānaṃ-ဧည့်သည်တို့ဖို့为客人(ဧည့်သည်တို့ အကျိုးငှာ-ဧည့်သည်တို့အတွက်) bhattaṃ-ထမင်း饭” ဟု ပုံစံပြခဲ့ပြီ။[“ဖို့”ဟူသော အနက်,”အတွက်”ဟူသောအနက်သည် “၏+အကျိုးငှာ” ဟူသော အနက်နှင့် အဓိပ္ပာယ် အတူပင် ဖြစ်၏။]
 
 ---
 - **၅။** ပဉ္စမီတွက်, တော-လည်း ဖက်၍, အောက်-ထက်-ကြောင့်ပါ, တော သက်ရာ, ရံခါ အားဖြင့် ပေး။
 - **၆။** ဆဋ္ဌီဖြင့် ဆို, သည်-ကို-တွင်-ထက်, စဉ်လည်း ဖက်, အနက် လျော်ရာပေး။
 
->**၅။** ပဉ္စမီဝိဘတ်၏ အနက်ကို “ဂါမာ-ရွာမှ” ဟူသော အနက်အပြင် “သီလသ္မာ-သီလအောက်၊ ဒါနံ-ဒါနသည်၊ဟီနံ-ညံ့၏၊ ဒါနသ္မာ-ဒါနထက်၊သီလ-သီလသည်၊ ပဏီတံ-မြတ်၏” ဟူသော “အောက်-ထက်” အနက်,”ကသ္မာ-အဘယ့်ကြောင့်၊ ယသ္မာ-အကြင့်ကြောင့်” စသော”ကြောင့်” ဟူသော အနက်လည်း ပေးနိုင်၏။
-ပဉ္စမီဝိဘတ်၏အစား “တော” ပစ္စည်းသက်၍”ဒါနတော-ဒါနမှ၊ ဒါနအောက်, ဒါနထက်, ဒါနကြောင့်” ဟူသော အနက်များပေးနိုင်၏၊ “အနိစ္စတော-အနိစ္စအားဖြင့်၊ ဝါ-အနိစ္စဟူ၍” ဟူသောအနက်လည်း ပေးနိုင်၏။
+>**၅။** ပဉ္စမီဝိဘတ်၏ အနက်ကို “gāmā-ရွာမှ村子” ဟူသော အနက်အပြင် “sīlasmā-သီလအောက်戒၊ dānaṃ-ဒါနသည်布施၊hīnaṃ-ညံ့၏低的၊ dānasmā-ဒါနထက်布施၊sīla-သီလသည်戒၊ paṇītaṃ-မြတ်၏高尚的” ဟူသော “အောက်-ထက်” အနက်,”kasmā-အဘယ့်ကြောင့်为什么၊ yasmā-အကြင့်ကြောင့်因为” စသော”ကြောင့်” ဟူသော အနက်လည်း ပေးနိုင်၏။
+ပဉ္စမီဝိဘတ်၏အစား “တော” ပစ္စည်းသက်၍”dānato-ဒါနမှ布施၊ ဒါနအောက်, ဒါနထက်, ဒါနကြောင့်” ဟူသော အနက်များပေးနိုင်၏၊ “aniccato-အနိစ္စအားဖြင့်不定的၊ ဝါ-အနိစ္စဟူ၍” ဟူသောအနက်လည်း ပေးနိုင်၏။
 
->**၆။** ဆဋ္ဌီဝိဘတ်အတွက် “ပုရိသဿ-၏” ဟူသော အနက်အပြင် “ဂါမဿ-ရွာသည်၊ ပူဇိတံ-ပူဇော်အပ်၏၊ ဗာလာနံ-လူမိုက်တို့ကို၊ အသေဝနာ_မပေါင်းခြင်း၊ ဂါဝီနံ-နွားမတို့တွင်၊ ကဏှာ-နွားနက်မ၊ ဓမ္မာနံ-တရားတို့ထက်၊ ပဝရံ-မြတ်၏၊ ဒါရကဿ-သူငယ်သည်း၊ ရုဒတော-ငိုတေစဉ်” ဟူသော အနက်များလည်း ပေးနိုင်၏။
+>**၆။** ဆဋ္ဌီဝိဘတ်အတွက် “ပုရိသဿ-၏男人的” ဟူသော အနက်အပြင် “gāmassa-ရွာသည်村子၊ pūjitaṃ-ပူဇော်အပ်၏礼敬၊ bālānaṃ-လူမိုက်တို့ကို坏人们၊အသေဝနာ_မပေါင်းခြင်း不加၊ gāvīnaṃ-နွားမတို့တွင်母牛们၊ kaṇhā-နွားနက်မ၊ dhammānaṃ-တရားတို့ထက်法(复)၊ pavaraṃ-မြတ်၏高尚၊ dārakassa-သူငယ်သည်း小孩၊ rudato-ငိုနေစဉ်正在哭” ဟူသော အနက်များလည်း ပေးနိုင်၏။
 
 ---
 - **၇။** သတ္တမီဆို,သည်-ကို ရှိလင့်, စဉ်-သော် ဆင့်၍, တွင်-ဖြင့်-ကြောင့်-ကို, သို့လည်းဆို, ထိုထို သင့်ရာပေး။
 
->**၇။** သတ္တမီဝီဘတ်အတွက်”၌”ဟူသော အနက်အပြင် “ဘိက္ခူသု-တို့သည်=ဘုတ္တေသု-ဆွမ်းစားကုန်ပြီးသော်၊ ဘိက္ခူသု-တို့ကို၊ ဘောဇီယမာနေသု-ဆွမ်းကျွေးအပ်ကုန်သော်” ဟုရှေ့က “သည်-ကို” ရှိရာ၌ နောက်က “သော်” ဟူသော အနက်ကို ပေးနိုင်၏။
-ဒါရကေ-သူငယ်သည်+ရုဒန္တေ - ငိုနေစဉ်၊ ဓမ္မ - တရားကို+ဒေသီယမာနေ-ဟောအပ်စဉ်၊ ဟုရှေ့က “သည်-ကို” ရှိရာ၌နောက်က “စဉ်” ဟူသော အနက်ကိုလည်း ပေးနိုင်၏။
-“ဂါဝီနံ-နွားမတို့တွင်+ကဏှာ-နွားနက်မ၊ ဟတ္ထေသု-လက်တို့ဖြင့်၊ ပိဏ္ဍာယ-ဆွမ်းအလို့ငှာ၊ စရန္တိ-လှည့် လည်ကြကုန်၏၊ စမ္မေသု-အရေတို့ကြောင့်၊ဟညတေ-သတ်အပ်၏၊ ဘိက္ခူသု-ရဟန်းတို့ကို၊ အဘိဝါ‌ဒေန္တိ-ရှိခိုးကုန်၏၊ သာဝတ္ထိယံ-သာဝတ္ထိသို့၊ဂမိဿာမိ-သွားမည်လို့(သွားမလို့)” ဟူသော အနက်များ ပေးနိုင်၏။
+>**၇။** သတ္တမီဝီဘတ်အတွက်”၌”ဟူသော အနက်အပြင် “bhikkhūsu-တို့သည်比库们=bhuttesu-ဆွမ်းစားကုန်ပြီးသော်吃晚饭၊ bhikkhūsu-တို့ကို比库们၊ bhojīyamānesu-ဆွမ်းကျွေးအပ်ကုန်သော်供养饭” ဟုရှေ့က “သည်-ကို” ရှိရာ၌ နောက်က “သော်” ဟူသော အနက်ကို ပေးနိုင်၏။
+dārake-သူငယ်သည်+rudante - ငိုနေစဉ်正在哭၊ dhamma  - တရားကို法+desīyamāne-ဟောအပ်စဉ်讲၊ ဟုရှေ့က “သည်-ကို” ရှိရာ၌နောက်က “စဉ်” ဟူသော အနက်ကိုလည်း ပေးနိုင်၏။
+“gāvīnaṃ-နွားမတို့တွင်+kaṇheနွားနက်မ？？？၊ hatthesu-လက်တို့ဖြင့်手(复)၊ piṇḍāya-ဆွမ်းအလို့ငှာ施食၊ caranti-လှည့် လည်ကြကုန်၏行去၊ cammesu-အရေတို့ကြောင့်皮革၊haññate-သတ်အပ်၏杀 bhikkhūsu-ရဟန်းတို့ကို၊ abhivā‌denti-ရှိခိုးကုန်၏၊ sāvatthiyaṃ-သာဝတ္ထိသို့沙瓦提城၊gamissāmi-သွားမည်လို့走(သွားမလို့)” ဟူသော အနက်များ ပေးနိုင်၏။
 
 >**မှတ်ချက်။** ။စဉ်-ဟု ပေးရသော အနက်ကို အနာဒရိယ (မလေးစားအပ်သော) အနက်ဟု ခေါ်၏၊ သူ၏နောက်က ပဗ္ဗဇိစသောကြိယာကို အနာဒရ(မလေးစားခြင်းအနက်)ဟု ခေါ်၏၊ သော်ဟုပေးရသော အနက်ကို လက္ခဏ(မှတ်သားကြောင်း) ဟု ခေါ်၏၊ သူ၏ နောက်က ကြိယာကို လက္ချ(မှတ်သားအပ်)ဟု ခေါ်၏၊ အဓိပ္ပာယ် အကျယ်ကို အထက် သဒ္ဒါကျမ်းများ၌ သိရလတံ့။
 
@@ -39,8 +39,8 @@
 - **၈။** တြ-ထ-ဓိ-ဓ, ဒါ-ဟိံ-ဟနှင့်, ဟိဉ္စန-ဟံ, ဒါစနံ-ဒါနိ, ရဟိ-ဓုနာ, တွေ့လေရာဝယ်, ၌-သာများများ, သို့-စသား, နည်းပါး လျော်အောင်ပေး။
 - **၉။** အနက်သွင်းလှယ်, အကျဉ်းခြယ်, ပျင်းဖွယ် မရှိသေး။
 
-> **၈။** ယတြ, ယတ္ထ-အကြင် အရပ်၌၊ သဗ္ဗဓိ-အလုံးစုံသော အရပ်၌၊ ဣဓ-ဤဘဝ၌၊ ကဒါ-အဘယ်အခါ၌၊ ယဟိံ-အကြင် အရပ်၌၊ ကုဒါစနံ-တစ်ရံတဆစ်၌၊ ကဟံ-အဘယ်အရပ်၌၊ အဓုနာ-ယခုအခါ၌။
-ဤသို့ တြ  စသော ပစ္စသည်းများဝယ်”၌”ဟူသော အနက်သာ များများပေးရ၏၊ တစ်ခါတစ်ရံ၌ “ကုဟိံ-အဘယ်သို့+ဂစ္ဆသိ-သွားမည်လို့နညိး၊ ယတြ (ယသ္မာ)-အကြင့်ကြောင့်၊ ယတြ(ယော)-အကြင်သူသည်” စသော အနက်များလည်း ပေးရပါသေး၏၊ သို့သော်ထိုအနက်များကား နည်းနည်းပါးပါးသာ ရှိသည်။
+> **၈။** ယတြ, ယတ္ထ-အကြင် အရပ်၌၊ sabbadhi-အလုံးစုံသော အရပ်၌各地地方၊ idha-ဤဘဝ၌这一世၊ kadā-အဘယ်အခါ၌什么时候၊ yahiṃ-အကြင် အရပ်၌？？？地方၊ kudācanaṃ-တစ်ရံတဆစ်၌၊ kahaṃ-အဘယ်အရပ်၌什么地方၊ adhunā-ယခုအခါ၌现在။
+ဤသို့ တြ  စသော ပစ္စသည်းများဝယ်”၌”ဟူသော အနက်သာ များများပေးရ၏၊ တစ်ခါတစ်ရံ၌ “kuhiṃ-အဘယ်သို့哪里+gacchasi-သွားမည်လို့နညိး၊ yatra (yasmā)-အကြင့်ကြောင့်因为၊ yatra(yo)-အကြင်သူသည်？？？” စသော အနက်များလည်း ပေးရပါသေး၏၊ သို့သော်ထိုအနက်များကား နည်းနည်းပါးပါးသာ ရှိသည်။
 
 >**၉။** ဤပြခဲ့သော လင်္ကာကို ကြေအောင် ကျက်၍ ပုံစံများကိုလည်းကြည့်ပါ၊ ဤမျှလောက် ကျက်ရ, ကြည့်ရရုံဖြင့် ပျင်းရှိ ငြီးငွေ့ ဖွယ်လည်း မရှိသေး၊ အထက် ပါဠိတော်များကို သင်ယူရာ၌ကားလွန်စွာ ကျေးဇူးများပါလိမ့်မည်။
 
