--- a/dutiya/5.tatiya_visesana.md
+++ b/dutiya/5.tatiya_visesana.md
@@ -1,18 +1,18 @@
 ## <center>အားဖြင့်-ဟု ပေးရသော တတိယာဝိသေသန</center>
-- **၁။** အမှာကံ ဗုဒ္ဓေါ ဂေါတ္တေန ဂေါတမော နာမ ဟောတိ။
-- **၂။** ဇာတိယာ သာကိယော နာမ ဟောတိ။
-- **၃။** နာမေန သိဒ္ဓတ္ထော နာမ ကုမာ‌ရော ဟောတိ။
-- **၄။** ပကတိယာ အဘိရူပေါ။
-- **၅။** ဇာတိယာ သောဠသဝဿော။
+- **၁။** amhā kaṃ buddho gottena gotamo nāma hoti။
+- **၂။** jātiyā sākiyo nāma hoti။
+- **၃။** nāmena siddhattho nāma kumā‌ro hoti။
+- **၄။** pakatiyā abhirūpo။
+- **၅။** jātiyā soḷasavasso။
 
 ---
 
-- **(က)** ငါသည် အနွယ်တော်အားဖြင့် ဂေါတမမည်သော မြတ်စွာဘုရားကို ရှိခိုးပါ၏။
-- **(ခ)** ငါတို့သည် ဇာတ်အားဖြင့် သာကိယမည်သော မြတ်စွာဘုရားကိုရှိခိုးပါကုန်၏။
-- **(ဂ)** သင်သည် ပင်ကိုယ်အားဖြင့် အလွန်အဆင်းလှသော သိဒ္ဓတ္ထမည်သော မင်းသားကို မြင်သည် မဟုတ်လော။ 
-- **(ဃ)** သင်သည် မွေးဖွားခြင်းအားဖြင့် အဘယ်နှစ်နှစ်ရှိသူနည်း။
+- **(က)** ငါသည် အနွယ်တော်အားဖြင့် ဂေါတမမည်သော မြတ်စွာဘုရားကို ရှိခိုးပါ၏။我礼敬家族名叫gotama的佛陀。
+- **(ခ)** ငါတို့သည် ဇာတ်အားဖြင့် သာကိယမည်သော မြတ်စွာဘုရားကိုရှိခိုးပါကုန်၏။我们礼敬高贵的sākiya佛陀
+- **(ဂ)** သင်သည် ပင်ကိုယ်အားဖြင့် အလွန်အဆင်းလှသော သိဒ္ဓတ္ထမည်သော မင်းသားကို မြင်သည် မဟုတ်လော။ 你们看不见非常漂亮的siddhattha王子吗？
+- **(ဃ)** သင်သည် မွေးဖွားခြင်းအားဖြင့် အဘယ်နှစ်နှစ်ရှိသူနည်း။你出生多少年了。
 
 **<center>ကြည့်ရှုရန်</center>**
->ဂေါတ္တေန-အနွယ်အားဖြင့်။ (**၂**) ဇာတိယာ-ဇာတ်(အမျိုး) အားဖြင့်။ (**၅**)ဇာတိယာ-မွေးဖွားခြင်းအားဖြင့် (မွေးသည်မှစ၍)။ ။ပကတိယာ-ပင်ကိုယ်အားဖြင့်(နဂိုအတိုင်း မပြုပြင်ဘဲ)။ 
+>gottena-အနွယ်အားဖြင့်家族名字။ (**၂**) jātiyā-ဇာတ်(အမျိုး) အားဖြင့်出生။ (**၅**)jātiyā-မွေးဖွားခြင်းအားဖြင့်出生 (မွေးသည်မှစ၍)။ ။pakatiyā-ပင်ကိုယ်အားဖြင့်(နဂိုအတိုင်း မပြုပြင်ဘဲ) 天然။ 
 
->ကုမာရော-မင်းသား။ ။အဘိရူပေါ-လွန်ကဲသော အဆင်းရှိ၏ (အလွန်အဆင်းလှ၏)။ ။သောဠသဝဿော-တစ်ဆယ့်‌ခြောက်နှစ် ရှိသည်။[ကတိဝဿော-အဘယ်နှစ်နှစ် ရှိသနည်း၊ “ကတိဝဿော သိ” ဟု ပါဠိစီပါ။]
+>kumāro-မင်းသား王子။ ။abhirūpo-လွန်ကဲသော အဆင်းရှိ၏非常的漂亮 (အလွန်အဆင်းလှ၏)။ ။soḷasavasso-တစ်ဆယ့်‌ခြောက်နှစ် ရှိသည်十六年။[kativasso-အဘယ်နှစ်နှစ် ရှိသနည်း几年၊ “kativasso si” ဟု ပါဠိစီပါ။]
