--- a/dutiya/7.lakkhana_lakkhaya.md
+++ b/dutiya/7.lakkhana_lakkhaya.md
@@ -1,17 +1,17 @@
 ## <center>လက္ခဏ-လက္ချ</center>ျ
 **<center>[သည်,သော်,လသော် ဟု ပေး။]</center>**
-- **၁။** ဗောဓိသတ္တေ ဇာယမာနေ မာတာ ပမောဒတိ။
-- **၂။** ဘိက္ခူသု ဘုတ္တေသု ပုရိသော ပစ္စာဂစ္ဆတိ။
-- **၃။** ဧဝံ ဝုတ္တေ ပုရိသော ပဋိဝစနံ န  ဒေတိ။
-- **၄။** ဧဝံ ဝုစ္စမာနော ဒါရကော အာဂစ္ဆတိ။
+- **၁။** bodhisatte jāyamāne mātā pamodati။
+- **၂။** bhikkhūsu bhuttesu puriso paccāgacchati။
+- **၃။** evaṃ vutte puriso paṭivacanaṃ na  deti။
+- **၄။** evaṃ vuccamāno dārako āgacchati။
 
 ---
 
-- **(က)** ကလေးသည် ဖွားမြင်လသော် အဖသည် အလွန်ဝမ်းမြောက်၏။
-- **(ခ)** သူငယ်မသည် ထမင်းစားပြီးသော် အမိသည် သွား၏။
-- **(ဂ)** ငါသည် ဂန္ဓာရုံ၌ နေလသော် ဤပါဠိသိက္ခာကို ရေး၏။ [လသော်ကို “လတ်သော်”ဟုသည်း သုံး၏။]
+- **(က)** ကလေးသည် ဖွားမြင်လသော် အဖသည် အလွန်ဝမ်းမြောက်၏။小孩出生了父亲很高兴。
+- **(ခ)** သူငယ်မသည် ထမင်းစားပြီးသော် အမိသည် သွား၏။小女孩吃完饭后去母亲那。
+- **(ဂ)** ငါသည် ဂန္ဓာရုံ၌ နေလသော် ဤပါဠိသိက္ခာကို ရေး၏။我在寺院住的时候写了pāḷisikkhā [လသော်ကို “လတ်သော်”ဟုသည်း သုံး၏။]
 
 **<center>ကြည့်ရှုရန်</center>**
->ပမောဒ-လွန်စွာ ဝမ်းမြောက်။ ။ပစ္စာဂစ္ဆ-ပြန်လာ။ ။ဇယမာနေ-ဖွားမြင်လသော်။ ။ဘုတ္တေသု-စားပြီးကုန်သော်။ ။ဧဝံ-ဤသို့။  ။ဝုတ္တေ-ပြောဆိုအပ်သော်။ ။ဝုစ္စမာနော-ပြောဆိုအပ်သော် (အပြောအဆို ခံရသော်)။
+>pamoda-လွန်စွာ ဝမ်းမြောက်高兴။ ။paccāgaccha-ပြန်လာ回来။ ။jayamāne-ဖွားမြင်လသော်出生။ ။bhuttesu-စားပြီးကုန်သော်吃完။ ။evaṃ-ဤသို့因此။  ။vutte-ပြောဆိုအပ်သော်说။ ။vuccamāno-ပြောဆိုအပ်သော် (အပြောအဆို ခံရသော်被说)။
 
->ဝိဟရန္တော-နေလသော်, သီတင်းသုံးတော်မူလသော် (သီတင်းသုံးတော်မူစဉ်=သီတင်းသုံးတော်မူခိုက်=သီတင်းသုံးတော်မူတုန်း)။ ။လိခ-ရေး။[မာန-အန္တရှိလျှင် ပဌမာဝိဘတ်ကိုလည်း “သော်”ဟု ပေးနိုင်၏။]
+>viharanto-နေလသော်, သီတင်းသုံးတော်မူလသော်居住 (သီတင်းသုံးတော်မူစဉ်=သီတင်းသုံးတော်မူခိုက်=သီတင်းသုံးတော်မူတုန်း)။ ။likha-ရေး写။[မာန-အန္တရှိလျှင် ပဌမာဝိဘတ်ကိုလည်း “သော်”ဟု ပေးနိုင်၏။]
