--- a/tatiya/1.ankagda_acytavibhta.md
+++ b/tatiya/1.ankagda_acytavibhta.md
@@ -39,7 +39,7 @@
 - **(က)** ယောကျ်ားသည် သတို့သမီးနှင့် အတူ စစ်ကိုင်းမြို့သို့ သွားအပ် လတ္တံ့男人和女人一起去实皆။
 - **(ခ)** သင်တို့သည် မန္တလေးမြို့မှ စစ်ကိုင်းတောင်သို့ လှေဖြင့်လာအပ်လတ္တံ့你们坐船从曼德勒到实皆။
 - **(ဂ)** သင်သည် ထမင်းကို ချက်အပ်လတ္တံ့你煮饭။
-- **(ဃ)** ငါသည် သင်(လမ်း)ကို သွားအပ်လတ္တံ့။
-- **(င)** သင်သည် ငါ(ထမင်း)တို့ကို ချက်အပ်ကုန်လတ္တံ့။
+- **(ဃ)** ငါသည် သင်(လမ်း)ကို သွားအပ်လတ္တံ့我走你的路။
+- **(င)** သင်သည် ငါ(ထမင်း)တို့ကို ချက်အပ်ကုန်လတ္တံ့你煮我的饭။
 **<center>ကြည့်ရှုရန်</center>**
->gacchīyissate-သွားအပ်လတ္တံ့ ၊ paccissate-ချက်အပ်လတ္တံ့ ၊ ဤသို့စသည်ဖြင့် “အပ်” ဟူသောအနက် ထည့်၍ ပေးပါ၊ ပြခဲ့ပြီးသောပုံစံများကိုပင် အနာဂတ် ကံဟောကြိယာဖြင့် လဲလှယ်၍ ပါဠိအစီခိုင်းနိုင်ပါသည်။
+>gacchīyissate-သွားအပ်လတ္တံ့ 走（还没）၊ paccissate-ချက်အပ်လတ္တံ့ 煮（还没）၊ ဤသို့စသည်ဖြင့် “အပ်” ဟူသောအနက် ထည့်၍ ပေးပါ၊ ပြခဲ့ပြီးသောပုံစံများကိုပင် အနာဂတ် ကံဟောကြိယာဖြင့် လဲလှယ်၍ ပါဠိအစီခိုင်းနိုင်ပါသည်။
