--- a/tatiya/2.atita.md
+++ b/tatiya/2.atita.md
@@ -13,47 +13,47 @@
 
 **<center>ကြည့်ရှုရန်</center>**
 
->အတီတ-ဖြစ်ပြီးသော (လွန်ခဲ့ပီးသော) ကြိယာ အကြောင်းအရာကို ”အတီတ=အတတ်” ဟု ‌ခေါ်၏၊ ထို့ကြောင့် “အဘဝီ, ဘဝီ-ဖြစ်ပြီ, ဖြစ်ခဲ့သည်,ဖြစ်လေသည်”ဟု မြန်မြပြန်ရ၏။
+>atīta-ဖြစ်ပြီးသော 已成为(လွန်ခဲ့ပီးသော) ကြိယာ အကြောင်းအရာကို ”atīta=အတတ်” ဟု ‌ခေါ်၏၊ ထို့ကြောင့် “abhavī, bhavī-ဖြစ်ပြီ, ဖြစ်ခဲ့သည်,ဖြစ်လေသည်已成为”ဟု မြန်မြပြန်ရ၏။
 
->အဂမီ(အဂမာသိ)-သွားပြီ, သွားခဲ့သည်, သွားလေသည်၊ အဟောသိ-ဖြစ်ပြီ, ဖြစ်ခဲ့သည်, ဖြစ်လေပြီ။ [အဟေသုံ-ဖြစ်ကုန်ပြီ,ဖြစ်ခဲ့ကြသည်, ဖြစ်ကြလေသည်။]
+>agamī(agamāsi)-သွားပြီ, သွားခဲ့သည်, သွားလေသည်已经走了၊ ahosi-ဖြစ်ပြီ, ဖြစ်ခဲ့သည်, ဖြစ်လေပြီ已成为။ [ahesuṃ-ဖြစ်ကုန်ပြီ,ဖြစ်ခဲ့ကြသည်, ဖြစ်ကြလေသည်已成为（复）။]
 
->အဒါသိ-ပေးပြီ(လှူပြီ), ပေးခဲ့သည်,ပေးလေသည်။ [အဒံသု-ပေး(လှူ)ကုန်ပြီ။] ဤသို့စသည်ဖြင့် အတိတ်ကြိယာပုဒ်များ နေပုံသည် အမျိုးမျိုး အဖုံဖုံပင် ရှိ၏။
+>adāsi-ပေးပြီ(လှူပြီ), ပေးခဲ့သည်,ပေးလေသည်已经给了။ [adaṃsu-ပေး(လှူ)ကုန်ပြီ已经给了（复）။] ဤသို့စသည်ဖြင့် အတိတ်ကြိယာပုဒ်များ နေပုံသည် အမျိုးမျိုး အဖုံဖုံပင် ရှိ၏။
 
 >ပြခဲ့သော ပုံစံများကိုပင် အတိတ်ကြိယာ လဲလှယ်၍ ပုံစံပြကြပါလေ၊သို့‌သော် ခက်ခဲသော ကြိယာကို မပြဘဲ လွယ်နိုင်သမျှ လွယ်ကူသော ကြိယာကိုသာ ပြကြပါ၊ ဤ၌ တချို့ ပုံစံများကို ပြပါအံ့။
 
 ## <center>အတိတ် ကတ္တားဟောဝါကျများ</center>
-- **၁။** ဂေါတမောနာမ ဗုဒ္ဓေါ လောကေ အဟောသိ။
-- **၂။** အဟံ ဣမသ္မိံ ဝိဟာရေ ဣမံ တေမာသံ အဝသိံ။
-- **၃။** မယံ တယာ သဟ နာဝါယ စစ်ကိုင်းပဗ္ဗတံ အဂမိမှာ။
-- **၄။** တုမှေ ဗုဒ္ဓသာသနေ သံဃဿ စီဝရံ အဒတ္ထ။
-- **၅။** တုမှေ ကုတော ဣမံ နဂရံ ကေန အာဂမိတ္ထ။
-- **၆။** မယံ ရန်ကုန်နဂရတော ဣမံ မန္တလေးနဂရံ အဂ္ဂိရထေန အာဂမိမှာ။
-- **၇။** ဣမသ္မိံ နဂရေ သံဃဿ မဟာဝိဟာရော အဟောသိ။
-- **၈။** အဟောသုံ အတီတ.မဒ္ဓါနံ အရဟန္တော သမ္မာသမ္ဗုဒ္ဓါ
+- **၁။** gotamonāma buddho loke ahosi။
+- **၂။** ahaṃ imasmiṃ vihāre imaṃ temāsaṃ avasiṃ။
+- **၃။** mayaṃ tayā saha nāvāya”စစ်ကိုင်းpabbataṃ agamimhā။
+- **၄။** tumhe buddhasāsane saṅghassa cīvaraṃ adattha။
+- **၅။** tumhe kuto imaṃ nagaraṃ kena āgamittha။
+- **၆။** mayaṃ ရန်ကုန်nagarato imaṃ mantale”nagaraṃ aggirathena āgamimha။
+- **၇။** imasmiṃ nagare saṅghassa mahāvihāro ahosi။
+- **၈။** ahosuṃ atīta.maddhānaṃ arahanto sammāsambuddhā။
 
 ## <center>အတိတ် ကံဟောဝါကျများ</center>
 
-- **၁။** အမှေဟိ ဒါရိကာဟိ သဟ နာဝါယ စစ်ကိုင်းပဗ္ဗတော ဂစ္ဆီယိတ္ထ။
-- **၂။** တုမှေဟိ ဗုဒ္ဓသာသနေ သံဃဿ စီဝရံ ဒီယိတ္ထ။
-- **၃။** မယာ မန္တလေးနဂရတော ရန်ကုန်နဂရံ ဝါယုယာနေန အာဂမီယိတ္ထ။
+- **၁။** amhehei dārikāhi saha nāvāya စစ်ကိုင်းpabbato gacchīyittha။
+- **၂။** tumhehei buddhasāsane saṅghassa cīvaraṃ dīyittha။
+- **၃။** mayā မန္တလေးnagarato ရန်ကုန်nagaraṃ vāyuyānena āgamīyittha။
 
 **<center>ကြည့်ရှုရန်</center>**
 
->အတီတံ- လွန်လေပြီးသော၊အဒ္ဓါနံ- ကာလ၌၊ အရဟန္တော- ပူဇော်အထူးကို ခံတော်မူထိုက်ကုန်သော၊ သမ္မာသမ္ဗုဒ္ဓါ- ဘုရားရှင်တို့သည်၊ [ဤ၌ မပြအပ်သော အာချာတ်ဝိဘတ်များကို သဒ္ဒါကျမ်းကို လေ့လာသောအခါ သိရပါလိမ့်မည်။]
+>atītaṃ- လွန်လေပြီးသော过去၊addhānaṃ- ကာလ၌？？၊ arahanto- ပူဇော်အထူးကို ခံတော်မူထိုက်ကုန်သော？？？၊sammāsambuddhā- ဘုရားရှင်တို့သည်佛陀们၊ [ဤ၌ မပြအပ်သော အာချာတ်ဝိဘတ်များကို သဒ္ဒါကျမ်းကို လေ့လာသောအခါ သိရပါလိမ့်မည်။]
 
 ## <center>ကတ္တုဝါကျ စီပါ</center>
 
-- **(က)** မြတ်စွာဘုရားသည် ဝေဿန္တရာမည်သော မင်း ဖြစ်ခဲ့ပြီ။
-- **(ခ)** ငါတို့သည် မော်တော်ယာဉ်ဖြင့် စစ်ကိုင်းမြို့သို့ သွားခဲ့ကြပြီ။
-- **(ဂ)** ငါသည် စစ်ကိုင်းတောင်၌ သံဃာတော်အား ဆွမ်း လှူခဲ့ပြီ။
-- **(ဃ)** သင်သည် ဘယ်က ဘာနဲ့ ဘာခဲ့သနည်း။
-- **(င)** ငါသည် မန္တလေးက မော်တော်ကားနဲ့ လာခဲ့ပါသည်။
+- **(က)** မြတ်စွာဘုရားသည် ဝေဿန္တရာမည်သော မင်း ဖြစ်ခဲ့ပြီ။佛陀成为过一切度王子。
+- **(ခ)** ငါတို့သည် မော်တော်ယာဉ်ဖြင့် စစ်ကိုင်းမြို့သို့ သွားခဲ့ကြပြီ။我们做飞机去过实皆。
+- **(ဂ)** ငါသည် စစ်ကိုင်းတောင်၌ သံဃာတော်အား ဆွမ်း လှူခဲ့ပြီ။我在实皆山是是上供养僧团过饭。
+- **(ဃ)** သင်သည် ဘယ်က ဘာနဲ့ လာခဲ့သနည်း။你从哪用什么来的。
+- **(င)** ငါသည် မန္တလေးက မော်တော်ကားနဲ့ လာခဲ့ပါသည်။我从曼德勒用摩托车来的。
 
 ## <center>ကမ္မဝါကျ စီပါ</center>
-- **(က)** ငါသည် မီးရထားဖြင့် စစ်ကိုင်းသို့ သွားအပ်ပြီ။
-- **(ခ)** သင်တို့သည် မန္တလေးမှ အမရပူရပြို့သို့ မော်တော်ကားဖြင့်လောအပ်ပြီ။
+- **(က)** ငါသည် မီးရထားဖြင့် စစ်ကိုင်းသို့ သွားအပ်ပြီ။我坐火车来的。
+- **(ခ)** သင်တို့သည် မန္တလေးမှ အမရပူရမြို့သို့ မော်တော်ကားဖြင့်လောအပ်ပြီ။你们从曼德勒坐摩托车去到阿魔摩罗补罗。
 
 **<center>ကြည့်ရှုရန်</center>**
 >ကြိယာအမျိုးမျိုး မထားတတ်သေးမီ တုမှ အမှ ဝါကျတွေကို သင်ပေး၍ မဖြစ်သေးပါ၊ ကံဟောဝါကျသဘော သိရုံလောက်သာ သင်ပေးသင့်၏၊ ထို့ကြောင့် နောက် ဝိဘတ်များ၌ ကံဟောဝါကျကို မပြတော့ပါ။
 
->ဂစ္ဆီယိတ္ထ-စသည်၌ အာ ဝိဘတ်ကို တ္ထ ပြုထားသည်ဟု မှတ်ပါ၊ ပါဠိများ၌လည်း ကံဟောဝါကျ၌ အာ ဝိဘတ်ကို တ္ထ ပြုထားသည်သာ များပါသည်။
+>gacchīyittha-စသည်၌ အာ ဝိဘတ်ကို တ္ထ ပြုထားသည်ဟု မှတ်ပါ၊ ပါဠိများ၌လည်း ကံဟောဝါကျ၌ အာ ဝိဘတ်ကို တ္ထ ပြုထားသည်သာ များပါသည်။
